-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.0 Beta1
-
None
-
-
c25c3c736 (dev), f6a3dbf81 (6.8)
Tried Qt 6.8.0 Beta1 with my project: https://github.com/uwerat/qskinny
The build step fails with: Unable to create DEPFILE: '/opt/qskinny/build/qsk1/src/.qsb/arcshadow.vert.qsb.d'
The reason for the error is a missing subdirectory '.qsb', that is not created automatically. After creating the directory manually everything works fine.
( Might be fixed in the cmake rules or the qsb tool )
The corresponding lines in my 'build.make' file look like this:
src/.qsb/arcshadow.vert.qsb: /opt/qskinny/qsk1/src/nodes/shaders/arcshadow-vulkan.vert
src/.qsb/arcshadow.vert.qsb: /opt/qskinny/config/qsk1/Qt/bin/qsb
src/.qsb/arcshadow.vert.qsb: src/CMakeFiles/qskinny.dir/compiler_depend.ts
@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --blue --bold --progress-dir=/opt/qskinny/build/qsk1/CMakeFiles --progress-num=$(CMAKE_PROGRESS_2) "Generating .qsb/arcshadow.vert.qsb"
cd /opt/qskinny/build/qsk1/src && /opt/qskinny/config/qsk1/Qt/bin/qsb --glsl 100es,120,150 --hlsl 50 --msl 12 -b -o /opt/qskinny/build/qsk1/src/.qsb/arcshadow.vert.qsb --depfile /opt/qskinny/build/qsk1/src/.qsb/arcshadow.vert.qsb.d /opt/qskinny/qsk1/src/nodes/shaders/arcshadow-vulkan.vert
For Gerrit Dashboard: QTBUG-126634 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
571136,3 | Create the output directory for depfile | dev | qt/qtshadertools | Status: MERGED | +2 | 0 |
571212,2 | Create the output directory for depfile | 6.8 | qt/qtshadertools | Status: MERGED | +2 | 0 |