Create the output directory for depfile

Ensure that the output directory exists before writing the depfile.

Amends 559fbc4f8166cf1e1a1a953fb2f40c1194c76538

Fixes: QTBUG-126634
Change-Id: I116310ad5d0738dae98aa66e51efe8488fbbe81d
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit c25c3c736776368173dd7d351613171f3e5ac279)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>